--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,5 +1,5 @@
-cmake_minimum_required(VERSION 3.8)
-project(Shadow-mapping)
+cmake_minimum_required(VERSION 3.5)
+project(Shadow-Mapping)
 
 set(CMAKE_CXX_STANDARD 11)
 set(PROJECT_NAME Shadow-mapping)
